<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Lanzar dados</string>
    <string name="lanzar">Has lanzado</string>
    <string name="ganado">!!Ganaste una moneda!!</string>
    <string name="perdido">!!Perdiste una moneda!!</string>
    <string name="ganado2">¡¡DOBLE 6 Ganaste 2 monedas!!</string>
    <string name="tiradaspendientes">Tiradas restantes: </string>
    <string name="bienvenida">Apptimizadores Nativos</string>
    <string name="jugar">Jugar</string>
    <string name="salir">Salir</string>
    <string name="pause">Pausa</string>
    <string name="ayuda">Ayuda</string>
    <string name="borrarPuntuaciones">Borrar puntuaciones</string>
    <string name="inicio">Inicio</string>

    <string name="textoAyuda">El juego consiste en lanzar 10 veces
        los dados y si tu puntuación es mayor que 6
        obtienes una moneda,
        si tienes un 6 doble obtienes 2 monedas
        y si tienes menos de 7 puntos pierdes una moneda</string>

    <string name="volver">Volver al inicio</string>
    <string name="tresmejores">Tres mejores</string>
    <string name="continuar">Continuar</string>
    <string name="finaljuego">Juego terminado</string>
    <string name="hint_GamerName">Introduce tu nombre</string>
    <string name="ScoreTitle">Puntuación lograda</string>
    <string name="Scores">Puntuaciones</string>
    <string name="SaveButton">Guardar Puntuación</string>
    <string name="NameTitle">Introduce tu Nombre</string>
    <string name="top3">Top 3 movil</string>
    <string name="borrarBD">Borrar BBDD</string>
    <string name="vertodosregistros">Listar jugadas</string>
    <string name="volverInicio">Volver a jugar</string>
    <string name="ajustes">Ajustes</string>

    <string name="AjustesMusica">Música</string>
    <string name="MusicaInicio">Menu Inicio</string>
    <string name="MusicaJuego">Juego</string>
    <string name="MusicaFinal">Menu Final</string>
    <string name="musica1">Música 1</string>
    <string name="musica2">Música 2</string>
    <string name="musica3">Música 3</string>
    <string name="TextoMenuMusica">Escoge la música que quieres escuchar en cada fase de la aplicación</string>

    <string name="idioma">Idioma</string>
    <string name="default_web_client_id">923572629789-196bcplknc71s3s2fr514tt3eqlg025c.apps.googleusercontent.com</string>
</resources>