<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- res/layout/popup_layout.xml -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AjustesMusica"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_musica01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/musica1"/>
        <Button
            android:id="@+id/btn_musica02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/musica2"/>
        <Button
            android:id="@+id/btn_musica03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/musica3"/>
        <Button
            android:id="@+id/btn_menuMusicaCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="Cancelar"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>