<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#43EA88"
    tools:context=".MenuInicial">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_Idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text="@string/idioma"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="191dp"
            android:layout_height="39dp"
            android:layout_marginStart="204dp"
             />

        <TextView
            android:id="@+id/txt_top3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/top3"
            android:textAlignment="center"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listTopThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="1dp"
            android:background="@color/green" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btn_jugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/jugar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_salir_juego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            android:text="@string/salir"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- DESPLEGABLE PARA IDIOMAS (SPINNER) -->

</androidx.constraintlayout.widget.ConstraintLayout>