<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtGamerName"
    style="@style/FinalPage"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:backgroundTint="#43EA88"
    tools:context=".PantallaFinal">

    <TextView
        android:id="@+id/txt_puntos"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtScoreTitle"
        tools:text="Puntos" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:text="@string/NameTitle"
        android:textAlignment="center"
        android:textColor="#D50000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtGamerN"
        android:layout_width="301dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/hint_GamerName"
        android:inputType="text|textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtScoreTitle"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/ScoreTitle"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_puntos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaveButton" />

    <Button
        android:id="@+id/SaveButton"
        style="@android:style/Widget.Button"
        android:layout_width="303dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="#D50000"
        android:foregroundGravity="center"
        android:foregroundTint="#D50000"
        android:text="@string/SaveButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#D50000"
        android:textColorHint="#D50000"
        android:textColorLink="#D50000"
        android:textSize="20sp"
        app:iconTint="#D50000"
        app:iconTintMode="add"
        app:layout_constraintBottom_toTopOf="@+id/txtScoreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGamerN"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#D50000"
        app:strokeColor="#D50000" />


</androidx.constraintlayout.widget.ConstraintLayout>