<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#43EA88"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/musicaMenuPrincipal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_button"
            android:contentDescription="Mostrar Popup"
            android:scaleType="fitCenter"
            android:src="@drawable/megaphone"

            />

        <TextView
            android:id="@+id/txtTiradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/tiradaspendientes"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_puntuacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="X"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="53dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/euro" />

        <TextView
            android:id="@+id/txt_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#0629ED"
            android:textSize="16dp"
            tools:text="mensaje" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image_dado1"
                android:layout_marginLeft="35dp"
                android:layout_width="120dp"
                android:layout_height="157dp"
                app:srcCompat="@drawable/dice_1" />
            <ImageView
                android:id="@+id/image_dado2"
                android:layout_marginLeft="35dp"
                android:layout_width="120dp"
                android:layout_height="157dp"
                app:srcCompat="@drawable/dice_1" />


        </LinearLayout>
        <TextView
            android:id="@+id/txt_final_juego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/finaljuego"
            android:textAlignment="center"
            android:textColor="#F10A0A"
            android:textSize="25dp"
            android:visibility="invisible"
            app:layout_constraintVertical_bias="0.34" />
        <Button
            android:id="@+id/btnLanzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:contextClickable="false"
            android:elegantTextHeight="false"
            android:fontFamily="@font/alfa_slab_one"
            android:freezesText="false"
            android:layout_gravity="center"
            android:onClick="lanzar"
            android:text="@string/roll"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"/>


    </LinearLayout>


















</androidx.constraintlayout.widget.ConstraintLayout>